commit translated contents

--- a/docs/visual-basic/language-reference/error-messages/bc42358.md
+++ b/docs/visual-basic/language-reference/error-messages/bc42358.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - BC42358
 ms.assetid: 43342515-c3c8-4155-9263-c302afabcbc2
-ms.openlocfilehash: 436fa213f6bf87f78ad768b7cff70f17806fa568
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 20a12071ccecf119059e2dfd7ddb02b2ec2e272c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73198217"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415440"
 ---
 # <a name="because-this-call-is-not-awaited-execution-of-the-current-method-continues-before-the-call-is-completed"></a>Non essendo possibile attendere la chiamata, l'esecuzione del metodo corrente continuerà prima del completamento della chiamata
 
-Non è possibile attendere la chiamata, pertanto l'esecuzione del metodo corrente continuerà prima del completamento della chiamata. Si consiglia di applicare l'operatore `Await` al risultato della chiamata.
+Non è possibile attendere la chiamata, pertanto l'esecuzione del metodo corrente continuerà prima del completamento della chiamata. Si consiglia di applicare l' `Await` operatore al risultato della chiamata.
 
-Il metodo corrente chiama un metodo asincrono che restituisce un <xref:System.Threading.Tasks.Task> o un <xref:System.Threading.Tasks.Task%601> e non applica l'operatore [await](../operators/await-operator.md) al risultato. Con la chiamata al metodo asincrono viene avviata un'attività asincrona. Tuttavia, poiché non viene applicato alcun operatore `Await`, l'esecuzione del programma continua senza attendere il completamento dell'attività. Nella maggior parte dei casi questo comportamento non è quello previsto. Di solito altri aspetti del metodo chiamante dipendono dai risultati della chiamata o, come minimo, si prevede che il metodo chiamato venga completato prima della restituzione da parte del metodo contenente la chiamata.
+Il metodo corrente chiama un metodo asincrono che restituisce <xref:System.Threading.Tasks.Task> o <xref:System.Threading.Tasks.Task%601> e non applica l'operatore [await](../operators/await-operator.md) al risultato. Con la chiamata al metodo asincrono viene avviata un'attività asincrona. Tuttavia, poiché non viene applicato alcun operatore `Await` , l'esecuzione del programma continua senza attendere il completamento dell'attività. Nella maggior parte dei casi questo comportamento non è quello previsto. Di solito altri aspetti del metodo chiamante dipendono dai risultati della chiamata o, come minimo, si prevede che il metodo chiamato venga completato prima della restituzione da parte del metodo contenente la chiamata.
 
 Un problema ugualmente importante riguarda cosa accade con le eccezioni generate nel metodo asincrono richiamato. Un'eccezione generata in un metodo che restituisce <xref:System.Threading.Tasks.Task> o  <xref:System.Threading.Tasks.Task%601> viene archiviata nell'attività restituita. Se non si attende l'attività o si controllano in modo esplicito le eccezioni, l'eccezione viene persa. Se si attende l'attività, la relativa eccezione viene generata di nuovo.
 
@@ -101,7 +101,7 @@ Nell'applicazione Windows Presentation Foundation (WPF) seguente sono inclusi i 
 
 2. Nell'Editor di codice di Visual Studio scegliere la scheda **MainWindow.xaml** .
 
-     Se la scheda non è visibile, aprire il menu di scelta rapida per MainWindow.xaml in **Esplora soluzioni**, quindi scegliere **Visualizza codice**.
+     Se la scheda non è visibile, aprire il menu di scelta rapida per MainWindow. XAML in **Esplora soluzioni**, quindi scegliere **Visualizza codice**.
 
 3. Sostituire il codice nella visualizzazione **XAML** di MainWindow. XAML con il codice seguente:
 
@@ -119,7 +119,7 @@ Nell'applicazione Windows Presentation Foundation (WPF) seguente sono inclusi i 
 
      Una finestra semplice con un pulsante e una casella di testo viene visualizzata nella visualizzazione **Progettazione** di MainWindow.xaml.
 
-     Per altre informazioni sulla finestra di progettazione XAML, vedere [Creazione di un'interfaccia utente tramite la finestra di progettazione XAML](/visualstudio/xaml-tools/creating-a-ui-by-using-xaml-designer-in-visual-studio). Per informazioni su come compilare una semplice interfaccia utente, vedere le sezioni "Per creare un'applicazione WPF" e "Per progettare una finestra WPF MainWindow semplice" nella [Procedura dettagliata: Accesso al Web tramite Async e Await](../../../visual-basic/programming-guide/concepts/async/walkthrough-accessing-the-web-by-using-async-and-await.md).
+     Per altre informazioni sulla finestra di progettazione XAML, vedere [Creating a UI by using XAML Designer](/visualstudio/xaml-tools/creating-a-ui-by-using-xaml-designer-in-visual-studio). Per informazioni su come compilare una semplice interfaccia utente, vedere le sezioni "Per creare un'applicazione WPF" e "Per progettare una finestra WPF MainWindow semplice" nella [Procedura dettagliata: Accesso al Web tramite Async e Await](../../programming-guide/concepts/async/walkthrough-accessing-the-web-by-using-async-and-await.md).
 
 4. Sostituire il codice in MainWindow.xaml.vb con quello riportato di seguito.
 
@@ -201,11 +201,11 @@ Nell'applicazione Windows Presentation Foundation (WPF) seguente sono inclusi i 
     ' Exiting the Click event handler.
     ```
 
-5. Premere il tasto F5 per eseguire il programma e quindi scegliere il pulsante **Start** .
+5. Premere F5 per eseguire il programma e quindi scegliere il pulsante **Avvia**.
 
      L'output previsto viene visualizzato alla fine del codice.
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore Await](../operators/await-operator.md)
-- [Programmazione asincrona con Async e Await](../../programming-guide/concepts/async/index.md)
+- [Operatore await](../operators/await-operator.md)
+- [Programmazione asincrona con Async e await](../../programming-guide/concepts/async/index.md)
