--- a/docs/visual-basic/misc/bc30345.md
+++ b/docs/visual-basic/misc/bc30345.md
@@ -1,5 +1,5 @@
 ---
-title: «<method1>'e'<method2>' non è in rapporto di overload perché si differenziano solo per i parametri dichiarati come 'ByRef' o 'ByVal'
+title: "' <method1> ' è <method2> ' non possono essere in overload perché si differenziano solo per parametri dichiarati come ' ByRef ' o ' ByVal '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30345
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30345
 ms.assetid: 82af13b1-2641-4881-b25a-c782974bded1
-ms.openlocfilehash: 8834f84341f4b2746b72345b640cc06556f033dc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: bcb03064422960bf57fc249e36fafe95e9982880
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663802"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414129"
 ---
-# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-byref-or-byval"></a>«\<method1 >' e '\<method2 >' non è in rapporto di overload perché si differenziano solo per i parametri dichiarati come 'ByRef' o 'ByVal'
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-byref-or-byval"></a>' \<method1> ' è \<method2> ' non possono essere in overload perché si differenziano solo per parametri dichiarati come ' ByRef ' o ' ByVal '
 Si è provato a eseguire l'overload di un metodo con un altro metodo che è diverso dal primo solo per un parametro dichiarato come `ByRef` o `ByVal`.  
   
  **ID errore:** BC30345  
@@ -25,5 +25,5 @@ Si è provato a eseguire l'overload di un metodo con un altro metodo che è dive
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overload della routine](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [Considerazioni sull'overload di routine](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+- [Overload della routine](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [Considerazioni sull'overload di routine](../programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
