--- a/docs/visual-basic/misc/bc30642.md
+++ b/docs/visual-basic/misc/bc30642.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30642
 ms.assetid: 3eaaf781-be9a-4466-a127-9e57fc9d6b6d
-ms.openlocfilehash: 696838fa84b72b076e535ba0d92388bc69ff6835
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7304c316a275faa179f984526d2f1529bec928b5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646530"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415102"
 ---
 # <a name="optional-and-paramarray-cannot-be-combined"></a>'Optional' e 'ParamArray' non possono essere combinati
 I modificatori `Optional` e `ParamArray` si escludono reciprocamente.  
@@ -25,5 +25,5 @@ I modificatori `Optional` e `ParamArray` si escludono reciprocamente.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [Optional](../../visual-basic/language-reference/modifiers/optional.md)
+- [ParamArray](../language-reference/modifiers/paramarray.md)
+- [Facoltativo](../language-reference/modifiers/optional.md)
