--- a/docs/visual-basic/misc/bc30654.md
+++ b/docs/visual-basic/misc/bc30654.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30654
 ms.assetid: af0fb1fc-1b2e-4cae-9768-10965cda5506
-ms.openlocfilehash: bb18232cd2fda0ad1f683cf48212abfdd3e4c06c
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 56a712e687a5a9bded5eca8e73193323f536f2b5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61762071"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415037"
 ---
 # <a name="return-statement-in-a-function-get-or-operator-must-return-a-value"></a>L'istruzione 'Return' all'interno di un Function, un Get o un Operator deve restituire un valore
 Le istruzioni`Return` devono essere usate per restituire un valore a una routine chiamante. Non è possibile usare le istruzioni `Return` per controllare il flusso di programma.  
@@ -27,5 +27,5 @@ Le istruzioni`Return` devono essere usate per restituire un valore a una routine
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Return](../../visual-basic/language-reference/statements/return-statement.md)
-- [Fine \<parola chiave > istruzione](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [Return (istruzione)](../language-reference/statements/return-statement.md)
+- [\<keyword>Istruzione End](../language-reference/statements/end-keyword-statement.md)
