--- a/docs/visual-basic/misc/bc30664.md
+++ b/docs/visual-basic/misc/bc30664.md
@@ -1,5 +1,5 @@
 ---
-title: Le conversioni da '<typename1>'a'<typename2>' deve essere esplicita
+title: Le conversioni da '<typename1>' a '<typename2>' deve essere esplicita
 ms.date: 07/20/2015
 f1_keywords:
 - bc30664
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30664
 ms.assetid: 84c0ece9-d5be-46de-b985-3ea010f3a181
-ms.openlocfilehash: 732775792ec1a0336469aac4f1711989fd3f39f7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c2c2d69a2102710eb612fe0e40151ff7f7cad196
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646425"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414959"
 ---
-# <a name="conversions-from-typename1-to-typename2-must-be-explicit"></a>Le conversioni da '\<NomeTipo1 >' a '\<in NomeTipo2 >' deve essere esplicita
+# <a name="conversions-from-typename1-to-typename2-must-be-explicit"></a>Le conversioni da '\<typename1>' a '\<typename2>' deve essere esplicita
 Questa conversione non può essere eseguita in modo implicito.  
   
  **ID errore:** BC30664  
@@ -25,4 +25,4 @@ Questa conversione non può essere eseguita in modo implicito.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Funzioni di conversione del tipo](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+- [CString](../language-reference/functions/type-conversion-functions.md)
