--- a/docs/visual-basic/misc/bc30665.md
+++ b/docs/visual-basic/misc/bc30665.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30665
 ms.assetid: 7c228087-39ea-4b30-a410-6ba711e67e5e
-ms.openlocfilehash: 71727cc191f8ab1663589e64fb9ee5ce076684f4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 92fccbd2faac5580d28fef8cc02b51b23715f136
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646421"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414946"
 ---
 # <a name="throw-operand-must-derive-from-systemexception"></a>L'operando 'Throw' deve derivare da 'System.Exception'
 L'argomento fornito a `Throw` deve essere un'istanza di `System.Exception` o un'istanza di una classe derivata da `System.Exception`.  
@@ -29,7 +29,7 @@ L'argomento fornito a `Throw` deve essere un'istanza di `System.Exception` o un'
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Throw](../../visual-basic/language-reference/statements/throw-statement.md)
-- [Istruzione Try...Catch...Finally](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [Istruzione throw](../language-reference/statements/throw-statement.md)
+- [Istruzione Try...Catch...Finally](../language-reference/statements/try-catch-finally-statement.md)
 - <xref:System.Exception?displayProperty=nameWithType>
 - [Gestione e generazione di eccezioni in .NET](../../standard/exceptions/index.md)
