--- a/docs/visual-basic/misc/bc30679.md
+++ b/docs/visual-basic/misc/bc30679.md
@@ -1,5 +1,5 @@
 ---
-title: Gli inizializzatori di matrice sono validi solo per le matrici, ma il tipo di '<variablename>'is'<typename>'
+title: Gli inizializzatori di matrice sono validi solo per le matrici, ma il tipo di ' <variablename> ' è <typename> ''
 ms.date: 07/20/2015
 f1_keywords:
 - bc30679
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30679
 ms.assetid: 3cf34882-7a58-4074-8ebb-52e58199a506
-ms.openlocfilehash: 1bc055d6eba264c50d697d58b31c0e46f96d11fe
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7afdaac0963453b3459beb4f2f648dbb2d8af1e0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646374"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414803"
 ---
-# <a name="array-initializers-are-valid-only-for-arrays-but-the-type-of-variablename-is-typename"></a>Gli inizializzatori di matrice sono validi solo per le matrici, ma il tipo di '\<nomevariabile >' è '\<nomeTipo >'
+# <a name="array-initializers-are-valid-only-for-arrays-but-the-type-of-variablename-is-typename"></a>Gli inizializzatori di matrice sono validi solo per le matrici, ma il tipo di ' \<variablename> ' è \<typename> ''
 Si è provato a inizializzare una variabile non di matrice con un elenco di valori.  
   
  **ID errore:** BC30679  
@@ -31,6 +31,6 @@ Si è provato a inizializzare una variabile non di matrice con un elenco di valo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
-- [Dichiarazione di variabile](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
+- [Dichiarazione di variabile](../programming-guide/language-features/variables/variable-declaration.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
