--- a/docs/visual-basic/misc/bc30680.md
+++ b/docs/visual-basic/misc/bc30680.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30680
 ms.assetid: 1ea60620-c8dc-4957-8cf4-07b25d20da3b
-ms.openlocfilehash: da88ad610443b3493adfdb5d835e393ea98e08df
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 290474c926144340a9690315f0f9b84496e62a4f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657966"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414790"
 ---
 # <a name="end-region-must-be-preceded-by-a-matching-region"></a>'#End Region' deve essere preceduto da un '#Region' corrispondente
-Con `#Region` è possibile specificare un blocco di codice da espandere o comprimere durante l'uso della funzionalità di struttura dell'Editor di codice di Visual Studio. L'inizio e la fine delle istruzioni `#Region` devono essere nello stesso blocco di codice.  
+Con `#Region` è possibile specificare un blocco di codice da espandere o comprimere quando si usa la funzionalità di struttura dell'Editor Visual Studio Code. L'inizio e la fine delle istruzioni `#Region` devono essere nello stesso blocco di codice.  
   
  **ID errore:** BC30680  
   
@@ -25,4 +25,4 @@ Con `#Region` è possibile specificare un blocco di codice da espandere o compri
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Direttiva #Region](../../visual-basic/language-reference/directives/region-directive.md)
+- [#Region (direttiva)](../language-reference/directives/region-directive.md)
