--- a/docs/visual-basic/misc/bc30689.md
+++ b/docs/visual-basic/misc/bc30689.md
@@ -1,5 +1,5 @@
 ---
-title: Istruzione non può trovarsi all'esterno di un'espressione lambda su più righe del corpo (metodo)
+title: L'istruzione non può trovarsi all'esterno del corpo di un metodo o di un'espressione lambda su più righe
 ms.date: 07/20/2015
 f1_keywords:
 - bc30689
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30689
 ms.assetid: bae41cae-375e-4a1a-a36f-9668ef7a795f
-ms.openlocfilehash: d5d2fe99bd6805985877de8d992b821ed59991dd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 58b7781bbd5b62f8719d690fba2b98458399b186
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657887"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412741"
 ---
 # <a name="statement-cannot-appear-outside-of-a-method-bodymultiline-lambda"></a>L'istruzione non può trovarsi all'esterno del corpo di un metodo o di un'espressione lambda su più righe
 Le istruzioni eseguibili devono essere usate senza routine.  
@@ -25,4 +25,4 @@ Le istruzioni eseguibili devono essere usate senza routine.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [Procedure](../programming-guide/language-features/procedures/index.md)
