--- a/docs/visual-basic/misc/bc30691.md
+++ b/docs/visual-basic/misc/bc30691.md
@@ -1,5 +1,5 @@
 ---
-title: «<typename>'è un tipo in'<containername>' e non può essere usato come espressione
+title: "' <typename> ' è un tipo in ' <containername> ' e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30691
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30691
 ms.assetid: af3b73dc-1ce3-49ee-91d6-abbbf5538916
-ms.openlocfilehash: eca50304d4029b43257193b988937f5ead1d11e0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e786ccb929df6396397151cc49726de2ef7d5cdd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657913"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412728"
 ---
-# <a name="typename-is-a-type-in-containername-and-cannot-be-used-as-an-expression"></a>«\<nomeTipo >' è un tipo in '\<nomecontenitore >' e non può essere usato come espressione
+# <a name="typename-is-a-type-in-containername-and-cannot-be-used-as-an-expression"></a>' \<typename> ' è un tipo in ' \<containername> ' e non può essere usato come espressione
 Uno dei nomi in uso è già stato dichiarato come nome di un tipo e non può essere usato in un'espressione.  
   
  **ID errore:** BC30691  
@@ -27,5 +27,5 @@ Uno dei nomi in uso è già stato dichiarato come nome di un tipo e non può ess
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parole chiave come nomi di elementi nel codice](../../visual-basic/programming-guide/program-structure/keywords-as-element-names-in-code.md)
-- [Convenzioni di denominazione di Visual Basic](../../visual-basic/programming-guide/program-structure/naming-conventions.md)
+- [Parole chiave come nomi di elementi nel codice](../programming-guide/program-structure/keywords-as-element-names-in-code.md)
+- [Convenzioni di denominazione di Visual Basic](../programming-guide/program-structure/naming-conventions.md)
