--- a/docs/visual-basic/misc/bc30697.md
+++ b/docs/visual-basic/misc/bc30697.md
@@ -1,5 +1,5 @@
 ---
-title: «<membername1>'non è possibile eseguire l'override'<membername2>' perché si differenziano per i tipi di parametri facoltativi
+title: "' <membername1> ' non può eseguire l'override <membername2> di '' perché si differenziano per i tipi di parametri facoltativi"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30697
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30697
 ms.assetid: 286bc9e0-2e20-4dd5-9f5a-fb917a5c1375
-ms.openlocfilehash: c2d6453f8c7253ebd256efcd74f1cc2a161eb297
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8b1aa751d357484a967049db1b1e8073e418107e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646332"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412676"
 ---
-# <a name="membername1-cannot-override-membername2-because-they-differ-by-the-types-of-optional-parameters"></a>«\<membername1 >' non è possibile eseguire l'override '\<membername2 >' perché si differenziano per i tipi di parametri facoltativi
+# <a name="membername1-cannot-override-membername2-because-they-differ-by-the-types-of-optional-parameters"></a>' \<membername1> ' non può eseguire l'override \<membername2> di '' perché si differenziano per i tipi di parametri facoltativi
 I membri di overload devono presentare tipi di dati diversi per uno o più parametri obbligatori.  
   
  **ID errore:** BC30697  
@@ -25,4 +25,4 @@ I membri di overload devono presentare tipi di dati diversi per uno o più param
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overload](../../visual-basic/language-reference/modifiers/overloads.md)
+- [Overload](../language-reference/modifiers/overloads.md)
