--- a/docs/visual-basic/misc/bc30702.md
+++ b/docs/visual-basic/misc/bc30702.md
@@ -1,5 +1,5 @@
 ---
-title: Indice '<indexnumber>'per la dimensione'<dimensionnumber>' non è compreso nell'intervallo
+title: Indice '<indexnumber>' per la dimensione '<dimensionnumber>' non compreso nell'intervallo
 ms.date: 07/20/2015
 f1_keywords:
 - bc30702
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30702
 ms.assetid: c81a2d76-7065-437e-8fc8-84e8ad01c7c6
-ms.openlocfilehash: a5ea9c5ec8ec5ec48142f5d9566745912a9766cc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a88aee923fa6e4b973873cbece75f5ea16d24f2f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646290"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412637"
 ---
-# <a name="index-indexnumber-for-dimension-dimensionnumber-is-out-of-range"></a>Indice '\<NumeroIndice >' per la dimensione '\<numerodimensione >' non è compreso nell'intervallo
+# <a name="index-indexnumber-for-dimension-dimensionnumber-is-out-of-range"></a>Indice '\<indexnumber>' per la dimensione '\<dimensionnumber>' non compreso nell'intervallo
 Uno degli indici supera l'intervallo definito.  
   
  **ID errore:** BC30702  
@@ -27,4 +27,4 @@ Uno degli indici supera l'intervallo definito.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
