--- a/docs/visual-basic/misc/bc30940.md
+++ b/docs/visual-basic/misc/bc30940.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30940
 ms.assetid: 0e4d037a-2d20-40e4-8ead-6d709d1c9c7a
-ms.openlocfilehash: 0ba3f986a12d6c35c2d3d28a49dce5b5338fd450
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f9b61c25982bbf1ff4bcd10e43bee3bb2d8a7501
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664767"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413999"
 ---
 # <a name="return-statement-in-an-addhandler-removehandler-or-raiseevent-method-cannot-return-a-value"></a>L'istruzione 'Return' in un metodo 'AddHandler', 'RemoveHandler' o 'RaiseEvent' non può restituire un valore
 I metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` in una dichiarazione `Custom Event` possono contenere istruzioni `Return` per uscire dai metodi. Tuttavia, l'istruzione `Return` non può specificare un valore restituito perché i metodi non possono restituire valori.  
@@ -25,9 +25,9 @@ I metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` in una dichiarazione `Custo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
 - [RemoveHandler (istruzione)](../language-reference/statements/removehandler-statement.md)
 - [RaiseEvent-istruzione](../language-reference/statements/raiseevent-statement.md)
-- [Istruzione Return](../../visual-basic/language-reference/statements/return-statement.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Return (istruzione)](../language-reference/statements/return-statement.md)
+- [Events](../programming-guide/language-features/events/index.md)
