--- a/docs/visual-basic/misc/bc31136.md
+++ b/docs/visual-basic/misc/bc31136.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31136
 ms.assetid: 199b2f7b-a85e-465d-9853-0995156e7ab6
-ms.openlocfilehash: cee3f5f367b68752fa860ab2356281ee5111f2eb
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 347a1a9057864f272881d9dbac973f02e72ee642
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664549"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414686"
 ---
 # <a name="addhandler-and-removehandler-method-parameters-must-have-the-same-delegate-type-as-the-containing-event"></a>Il tipo delegato dei parametri dei metodi 'AddHandler' e 'RemoveHandler' deve essere uguale a quello dell'evento che li contiene
 Una dichiarazione `Custom Event` deve avere dichiarazioni `AddHandler` o `RemoveHandler` , ognuna delle quali accetta un solo parametro del tipo delegato specificato dalla clausola `As` dell'evento personalizzato.  
@@ -30,7 +30,7 @@ Una dichiarazione `Custom Event` deve avere dichiarazioni `AddHandler` o `Remove
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
 - [RemoveHandler (istruzione)](../language-reference/statements/removehandler-statement.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Events](../programming-guide/language-features/events/index.md)
