--- a/docs/visual-basic/misc/bc31138.md
+++ b/docs/visual-basic/misc/bc31138.md
@@ -1,5 +1,5 @@
 ---
-title: I parametri dei metodi ' AddHandler ',' RemoveHandler ' è RaiseEvent ' non possono<modifier>essere dichiarati ''
+title: I parametri dei metodi ' AddHandler ',' RemoveHandler ' è RaiseEvent ' non possono essere dichiarati ' <modifier> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31138
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31138
 ms.assetid: 6d8df92a-95fc-4a7d-ab1e-06d312155c55
-ms.openlocfilehash: a87125c058e46072c48d4d084480f2839b04ba40
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 4fd7104fb1289d17639ba1a768669e8490abae25
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664441"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414660"
 ---
-# <a name="addhandler-removehandler-and-raiseevent-method-parameters-cannot-be-declared-modifier"></a>I parametri dei metodi ' AddHandler ',' RemoveHandler ' è RaiseEvent ' non possono\<essere dichiarati come ' modifier >'
+# <a name="addhandler-removehandler-and-raiseevent-method-parameters-cannot-be-declared-modifier"></a>I parametri dei metodi ' AddHandler ',' RemoveHandler ' è RaiseEvent ' non possono essere dichiarati ' \<modifier> '
 I parametri dei metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` non possono essere dichiarati con i modificatori `Optional` o `ParamArray` .  
   
  I modificatori `Optional` o `ParamArray` sono consentiti solo nei parametri nelle dichiarazioni `Declare`, `Function`, `Property`e `Sub` .  
@@ -27,10 +27,10 @@ I parametri dei metodi `AddHandler`, `RemoveHandler`e `RaiseEvent` non possono e
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
 - [RemoveHandler (istruzione)](../language-reference/statements/removehandler-statement.md)
 - [RaiseEvent-istruzione](../language-reference/statements/raiseevent-statement.md)
-- [Facoltativo](../../visual-basic/language-reference/modifiers/optional.md)
-- [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Facoltativo](../language-reference/modifiers/optional.md)
+- [ParamArray](../language-reference/modifiers/paramarray.md)
+- [Events](../programming-guide/language-features/events/index.md)
