--- a/docs/visual-basic/misc/bc32007.md
+++ b/docs/visual-basic/misc/bc32007.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' i valori non possono essere convertiti in 'Char'"
+title: <typename>non è possibile convertire i valori '' in ' Char '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32007
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32007
 ms.assetid: b04212da-57ac-4493-9480-04c12b50f875
-ms.openlocfilehash: 5b4c25fb9a671a3de5fa249ef9036e4969800d10
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7909de4fcbdc915148ffb23239e538f62ca200db
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64593149"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413960"
 ---
-# <a name="typename-values-cannot-be-converted-to-char"></a>'\<nomeTipo >' i valori non possono essere convertiti in 'Char'
-'\<nomeTipo >' non è possibile convertire i valori in Char. Usare 'Microsoft.VisualBasic.ChrW' per interpretare un valore numerico come carattere Unicode oppure convertirlo in 'String' per produrre una cifra  
+# <a name="typename-values-cannot-be-converted-to-char"></a>\<typename>non è possibile convertire i valori '' in ' Char '
+\<typename>i valori '' non possono essere convertiti in caratteri. Usare 'Microsoft.VisualBasic.ChrW' per interpretare un valore numerico come carattere Unicode oppure convertirlo in 'String' per produrre una cifra  
   
  Un'espressione tenta di convertire un tipo di dati diverso da `String` o `Object` in `Char`.  
   
@@ -27,5 +27,5 @@ ms.locfileid: "64593149"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Conversioni implicite ed esplicite](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [Tipo di dati Char](../../visual-basic/language-reference/data-types/char-data-type.md)
+- [Conversioni implicite ed esplicite](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [Tipo di dati Char](../language-reference/data-types/char-data-type.md)
