--- a/docs/visual-basic/misc/bc32014.md
+++ b/docs/visual-basic/misc/bc32014.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32014
 ms.assetid: d8d7155d-82d1-4a25-b9bb-1883e1586383
-ms.openlocfilehash: 7454ebddc57e28afb819c78daf0609fec66e68de
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d716fabddbfd8562b88d45f39dbe3b47fa56e095
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61833404"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413921"
 ---
 # <a name="bounds-can-be-specified-only-for-the-top-level-array-when-initializing-an-array-of-arrays"></a>I limiti possono essere specificati solo per la matrice di primo livello durante l'inizializzazione di una matrice di matrici
 L'inizializzazione di matrice per una matrice di matrici imposta la lunghezza iniziale di uno dei livelli inferiori. Nell'istruzione di dichiarazione di matrice si può specificare solo la lunghezza della matrice di primo livello.  
@@ -27,4 +27,4 @@ L'inizializzazione di matrice per una matrice di matrici imposta la lunghezza in
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore New](../../visual-basic/language-reference/operators/new-operator.md)
+- [Operatore New](../language-reference/operators/new-operator.md)
