--- a/docs/visual-basic/misc/bc32017.md
+++ b/docs/visual-basic/misc/bc32017.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32017
 ms.assetid: 7e06022f-d12d-4f17-b712-bad573fea116
-ms.openlocfilehash: 7a0a15b6298d6e051d401bf1ff86ae10fd9faef9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: bb0250a3b92aa9b9e1bb54a6f96b9aa4e1e9bdbc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64645944"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413882"
 ---
 # <a name="comma--or-a-valid-expression-continuation-expected"></a>È prevista la virgola, il segno ')' o una continuazione di espressione valida
 I membri di un elenco, ad esempio un elenco di argomenti in una definizione o chiamata di routine, non sono separati o terminati correttamente. È possibile che due membri dell'elenco siano separati solo da uno o più spazi.  
@@ -25,5 +25,5 @@ I membri di un elenco, ad esempio un elenco di argomenti in una definizione o ch
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Sub](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
+- [Routine Sub](../programming-guide/language-features/procedures/sub-procedures.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
