--- a/docs/visual-basic/misc/bc32072.md
+++ b/docs/visual-basic/misc/bc32072.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile implementare<interfacename1>l'interfaccia '' perché l'implementazione potrebbe essere in conflitto con l'implementazione<interfacename2>di un'altra interfaccia implementata '' per alcuni argomenti di tipo
+title: Non è possibile eseguire l'implementazione dell'interfaccia '<interfacename1>' perché potrebbe essere in conflitto con l'implementazione di un'altra interfaccia '<interfacename2>' per alcuni argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - BC32072
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32072
 ms.assetid: af1cc688-c8cf-4cb2-a8a9-310f5139fe7b
-ms.openlocfilehash: 721fd6cffb952cdbe89b38a4b805d40dbf5b4aab
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 4ff70a8d854e25b31a06705eba4b4e7bb7c9d6ca
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68512695"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413791"
 ---
-# <a name="cannot-implement-interface-interfacename1-because-its-implementation-could-conflict-with-the-implementation-of-another-implemented-interface-interfacename2-for-some-type-arguments"></a>Non è possibile implementare\<l'interfaccia ' nomeinterfaccia1 >' perché l'implementazione potrebbe essere in conflitto con l'implementazione\<di un'altra interfaccia implementata ' nomeinterfaccia2 >' per alcuni argomenti di tipo
+# <a name="cannot-implement-interface-interfacename1-because-its-implementation-could-conflict-with-the-implementation-of-another-implemented-interface-interfacename2-for-some-type-arguments"></a>Non è possibile eseguire l'implementazione dell'interfaccia '\<interfacename1>' perché potrebbe essere in conflitto con l'implementazione di un'altra interfaccia '\<interfacename2>' per alcuni argomenti di tipo
 
 Una dichiarazione di classe include un'istruzione `Implements` che specifica due o più interfacce, di cui almeno una delle due è generica e due delle implementazioni potrebbero entrare in conflitto per alcuni valori degli argomenti di tipo.
 
@@ -46,8 +46,8 @@ Poiché `iFace2` viene creato usando `String`, `testClass` deve implementare due
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Class](../../visual-basic/language-reference/statements/class-statement.md)
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
-- [Istruzione Implements](../../visual-basic/language-reference/statements/implements-statement.md)
+- [Istruzione Class](../language-reference/statements/class-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
+- [Istruzione Implements](../language-reference/statements/implements-statement.md)
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
