--- a/docs/visual-basic/misc/bc32078.md
+++ b/docs/visual-basic/misc/bc32078.md
@@ -1,5 +1,5 @@
 ---
-title: «<membername>'non può implementare'<interfacename>.<interfacemembername>' perché si differenziano per i vincoli del parametro
+title: "' <membername> ' non può implementare ' <interfacename> . <interfacemembername> ' perché si differenziano per vincoli di parametro di tipo"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32078
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32078
 ms.assetid: 2c971345-edb4-491e-9202-8eb8286b66f8
-ms.openlocfilehash: d86f1712b05657e48d83727eb8e2a0897f77322e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f556794ed2cfb390cb19d08c065dbea154a3b9e3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618720"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413700"
 ---
-# <a name="membername-cannot-implement-interfacenameinterfacemembername-because-they-differ-by-type-parameter-constraints"></a>«\<nomeMembro >' non può implementare '\<nomeinterfaccia >.\< NomeMembroInterfaccia >' perché si differenziano per i vincoli del parametro
+# <a name="membername-cannot-implement-interfacenameinterfacemembername-because-they-differ-by-type-parameter-constraints"></a>' \<membername> ' non può implementare ' \<interfacename> . \<interfacemembername> ' perché si differenziano per vincoli di parametro di tipo
 Un evento generico, una proprietà o una routine prova a implementare un membro simile definito in un'interfaccia, ma hanno elenchi di vincoli diversi nei parametri di tipo.  
   
  Per implementare un membro di interfaccia, il membro di implementazione deve corrispondere non solo alla firma completa del membro di interfaccia, ma anche al meccanismo di passaggio di ogni parametro.  
@@ -29,8 +29,8 @@ Un evento generico, una proprietà o una routine prova a implementare un membro 
   
 - Se si prevede di implementare il membro di interfaccia, verificare che i vincoli del parametro di tipo corrispondano esattamente a quelli del membro di interfaccia.  
   
-- Se i vincoli del parametro di tipo devono rimanere così come sono, non è possibile implementare il membro di interfaccia in questa dichiarazione. Rimuovere il [implementa](../../visual-basic/language-reference/statements/implements-clause.md) parola chiave dalla dichiarazione.  
+- Se i vincoli del parametro di tipo devono rimanere così come sono, non è possibile implementare il membro di interfaccia in questa dichiarazione. Rimuovere la parola chiave [Implements](../language-reference/statements/implements-clause.md) dalla dichiarazione.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
