--- a/docs/visual-basic/misc/bc32089.md
+++ b/docs/visual-basic/misc/bc32089.md
@@ -1,5 +1,5 @@
 ---
-title: "'<parametername>' è già dichiarato come parametro di tipo di questo metodo"
+title: "' <parametername> ' è già dichiarato come parametro di tipo di questo metodo"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32089
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32089
 ms.assetid: 5e440b4b-f62b-4ff5-9148-2372d4752bf6
-ms.openlocfilehash: 6448c90d6c10af55cbe9a85a88c4fa169f4dd7aa
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d0885c4561cf60dfde3f5ae5ea2dca4dbaf8c478
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912899"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358711"
 ---
-# <a name="parametername-is-already-declared-as-a-type-parameter-of-this-method"></a>'\<nomeparametro >' è già dichiarato come parametro di tipo di questo metodo
+# <a name="parametername-is-already-declared-as-a-type-parameter-of-this-method"></a>' \<parametername> ' è già dichiarato come parametro di tipo di questo metodo
 Una routine generica definisce un parametro normale o una variabile locale con lo stesso nome di un parametro di tipo.  
   
  Ogni parametro di una routine, inclusi tutti i parametri di tipo di una routine generica, deve avere un nome diverso da quello di tutti gli altri parametri. Poiché i parametri di routine vengono usati come variabili locali, qualsiasi variabile locale dichiarata all'interno della routine deve avere anch'essa un nome diverso da quello di tutti i parametri e parametri di tipo.  
@@ -27,5 +27,5 @@ Una routine generica definisce un parametro normale o una variabile locale con l
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [Elenco dei parametri](../../visual-basic/language-reference/statements/parameter-list.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
+- [Elenco parametri](../language-reference/statements/parameter-list.md)
