--- a/docs/visual-basic/misc/bc32103.md
+++ b/docs/visual-basic/misc/bc32103.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC32103
 ms.assetid: 5418b420-a014-4006-84aa-20ddac6739e6
-ms.openlocfilehash: d7a5e5ce702a68f187a093ccf79dbcd6760bb092
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 4f9a16dfdf626976e15a2f9a53ca96c5dd32f186
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61672224"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413687"
 ---
 # <a name="new-constraint-and-structure-constraint-cannot-be-combined"></a>Non è possibile combinare i vincoli 'New' e 'Structure'
-Un elenco di vincoli include sia la [nuovo operatore](../../visual-basic/language-reference/operators/new-operator.md) vincolo e il [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) vincolo.  
+Un elenco di vincoli include sia il vincolo di [nuovo operatore](../language-reference/operators/new-operator.md) che il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) .  
   
- Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) ). Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.  
+ Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) ). Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.  
   
  Il vincolo `New` specifica che l'argomento di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere. Tuttavia, una struttura non può avere un costruttore senza parametri non condiviso. Quindi, i vincoli `New` e `Structure` sono in conflitto.  
   
@@ -33,5 +33,5 @@ Un elenco di vincoli include sia la [nuovo operatore](../../visual-basic/languag
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
