--- a/docs/visual-basic/misc/bc32106.md
+++ b/docs/visual-basic/misc/bc32106.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'non soddisfa il vincolo 'Class' per il parametro di tipo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' non soddisfa il vincolo ' Class ' per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32106
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC32106
 ms.assetid: 1bac1dd6-f86b-4e98-ba2d-57d1936e3658
-ms.openlocfilehash: 55288dc90cc0314914068612f800bc882bd9cad1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2cac1e83f881a9f3eeae1d1b4fba0c05e59ecf7a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640487"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413648"
 ---
-# <a name="type-argument-typeargumentname-does-not-satisfy-the-class-constraint-for-type-parameter-typeparametername"></a>Argomento di tipo '\<nomeargomentotipo >' non soddisfa il vincolo' della classe per il parametro di tipo\<nomeparametrotipo >'
+# <a name="type-argument-typeargumentname-does-not-satisfy-the-class-constraint-for-type-parameter-typeparametername"></a>L'argomento di tipo ' \<typeargumentname> ' non soddisfa il vincolo ' Class ' per il parametro di tipo ' \<typeparametername> '
 Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di tipo riferimento nel parametro di tipo corrispondente.  
   
  Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo. Se non si include alcuna classe o interfaccia specifica nell'elenco di vincoli, è possibile imporre un requisito generale specificando una delle seguenti condizioni:  
   
-- L'argomento di tipo deve essere un tipo valore (deve includere il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) )  
+- L'argomento di tipo deve essere un tipo valore (deve includere il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) )  
   
-- L'argomento di tipo deve essere un tipo riferimento (deve includere il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) )  
+- L'argomento di tipo deve essere un tipo riferimento (deve includere il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) )  
   
  Non è possibile specificare sia `Structure` che `Class` per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.  
   
@@ -33,6 +33,6 @@ Un argomento di tipo fornito a un tipo generico non soddisfa il vincolo di tipo 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
-- [Procedura: Usare una classe generica](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Procedura: Usare una classe generica](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
