--- a/docs/visual-basic/misc/bc32107.md
+++ b/docs/visual-basic/misc/bc32107.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32107
 ms.assetid: 218a7f0c-dd4f-4086-a52c-e8d581377e8b
-ms.openlocfilehash: e4afd105cdafafec2096e6de6646e9ee3b303254
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 15fb8c3e9cf4a63f190eae75c35c5248bac57b9f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64640479"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413635"
 ---
 # <a name="class-constraint-and-a-specific-class-type-constraint-cannot-be-combined"></a>Impossibile combinare il vincolo 'Class' e uno specifico vincolo di tipo di classe
-Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) che il nome di una classe definita.  
+Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) che il nome di una classe definita.  
   
  Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo. Si possono specificare i requisiti seguenti in qualsiasi combinazione:  
   
@@ -43,5 +43,5 @@ Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../../visual-
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
