--- a/docs/visual-basic/misc/bc42300.md
+++ b/docs/visual-basic/misc/bc42300.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42300
 ms.assetid: f9f7d1da-a723-4237-bd78-6db7ed8bc4aa
-ms.openlocfilehash: 0fe1257b65c6aa09957b9e3a229aff5a33c3929e
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 6feaeae622bbfcb167e530a0da7f74f7b5547ea2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61767665"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413621"
 ---
 # <a name="xml-comment-block-must-immediately-precede-the-language-element-to-which-it-applies"></a>Il blocco di commento XML deve essere specificato subito prima dell'elemento del linguaggio a cui si riferisce
 Il blocco di commento XML deve essere specificato immediatamente prima dell'elemento del linguaggio a cui si riferisce. Il commento XML verrà ignorato.  
@@ -29,5 +29,5 @@ Il blocco di commento XML deve essere specificato immediatamente prima dell'elem
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Creare documentazione XML](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
+- [Procedura: Creare documentazione XML](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
