--- a/docs/visual-basic/misc/bc42304.md
+++ b/docs/visual-basic/misc/bc42304.md
@@ -1,5 +1,5 @@
 ---
-title: 'Errore di analisi di documentazione XML: <error>'
+title: 'Errore di analisi della documentazione XML: <error>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc42304
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC42304
 ms.assetid: 44b043d2-ebfe-415c-87ed-00ea32227b23
-ms.openlocfilehash: 90b12dab28145d9aeb64944b8834c56fa2e47df5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c2e29f5aab136c0fb93d1a2673cd903ae6218e46
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588031"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413544"
 ---
-# <a name="xml-documentation-parse-error-error"></a>Errore di analisi di documentazione XML: \<errore >
+# <a name="xml-documentation-parse-error-error"></a>Errore di analisi della documentazione XML: \<error>
 I messaggi seguenti vengono visualizzati con questo errore. Per altre informazioni, vedere l'argomento specifico:  
   
-- [Tag del commento XML '\<tag >' presente più volte con attributi identici nello stesso blocco di commento XML](../../visual-basic/misc/bc42305.md)  
+- [Il tag '\<tag>' del commento XML è presente più volte con attributi identici nello stesso blocco di commento XML](bc42305.md)  
   
-- [Tag del commento XML '\<tag >' non è consentito in un '\<elemento >' elemento di linguaggio](../../visual-basic/misc/bc42306.md)  
+- [Il tag del commento XML \<tag> non è consentito in un elemento di linguaggio '\<element>'](bc42306.md)  
   
-- [Il parametro del commento XML '\<parametro >' non corrisponde a un parametro corrispondente \<parola chiave > istruzione](../../visual-basic/misc/bc42307.md)  
+- [Il parametro '\<parameter>' del commento XML non corrisponde a un parametro nell'istruzione \<keyword> corrispondente](bc42307.md)  
   
-- [Il parametro di commento XML deve avere un attributo 'name'](../../visual-basic/misc/bc42308.md)  
+- [Il parametro di commento XML deve avere un attributo 'name'](bc42308.md)  
   
-- [Il commento XML contiene un tag con un attributo 'cref' '\<attributo >' che non può essere risolto](../../visual-basic/misc/bc42309.md)  
+- [Il commento XML contiene un elemento con un attributo 'cref' '\<attribute>' che non è stato possibile risolvere](bc42309.md)  
   
-- [Tag del commento XML 'include' deve avere un '\<attributo >' attributo](../../visual-basic/misc/bc42310.md)  
+- [Il tag 'include' del commento XML deve avere un attributo '\<attribute>'](bc42310.md)  
   
  **ID errore:** BC42304  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
