--- a/docs/visual-basic/language-reference/error-messages/bc30828.md
+++ b/docs/visual-basic/language-reference/error-messages/bc30828.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30828
 ms.assetid: 7e5cf519-8b64-4ac5-8116-705fe26c846d
-ms.openlocfilehash: 3593f238c72cbcce911c72e42552d6a75188b628
-ms.sourcegitcommit: 2e95559d957a1a942e490c5fd916df04b39d73a9
+ms.openlocfilehash: d15db242564a98f6aa86c0b85897fd73972b905e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/16/2019
-ms.locfileid: "72405060"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415453"
 ---
 # <a name="as-any-is-not-supported-in-declare-statements"></a>'As Any' non è supportato nelle istruzioni 'Declare'
-Il tipo di dati `Any` è stato usato con le istruzioni `Declare` in Visual Basic 6,0 e versioni precedenti per consentire l'uso di argomenti che potrebbero contenere qualsiasi tipo di dati. Visual Basic supporta l'overload, tuttavia, rende obsoleto il tipo di dati `Any`.  
+Il `Any` tipo di dati è stato usato con le `Declare` istruzioni in Visual Basic 6,0 e versioni precedenti per consentire l'uso di argomenti che potrebbero contenere qualsiasi tipo di dati. Visual Basic supporta tuttavia l'overload, quindi rende `Any` obsoleto il tipo di dati.  
   
  **ID errore:** BC30828  
   
@@ -25,13 +25,13 @@ Il tipo di dati `Any` è stato usato con le istruzioni `Declare` in Visual Basic
   
      [!code-vb[VbVbalrStatements#95](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrStatements/VB/class5.vb#95)]  
   
-2. Utilizzare l'attributo <xref:System.Runtime.InteropServices.MarshalAsAttribute> per specificare `As Any` quando è previsto `Void*` dalla procedura chiamata.  
+2. Utilizzare l' <xref:System.Runtime.InteropServices.MarshalAsAttribute> attributo per specificare `As Any` quando `Void*` si prevede che la routine venga chiamata.  
   
      [!code-vb[VbVbalrStatements#96](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrStatements/VB/class5.vb#96)]  
   
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Runtime.InteropServices.MarshalAsAttribute>
-- [Procedura dettagliata: Chiamata delle API di Windows](../../../visual-basic/programming-guide/com-interop/walkthrough-calling-windows-apis.md)
-- [Istruzione Declare](../../../visual-basic/language-reference/statements/declare-statement.md)
+- [Procedura dettagliata: Chiamata delle API di Windows](../../programming-guide/com-interop/walkthrough-calling-windows-apis.md)
+- [Declare Statement](../statements/declare-statement.md)
 - [Creazione di prototipi nel codice gestito](../../../framework/interop/creating-prototypes-in-managed-code.md)
