--- a/docs/visual-basic/misc/bc30359.md
+++ b/docs/visual-basic/misc/bc30359.md
@@ -1,5 +1,5 @@
 ---
-title: "'Default' può essere applicato solo un nome di proprietà in un <type>"
+title: Default' può essere applicato solo a un nome di proprietà in una <type>
 ms.date: 07/20/2015
 f1_keywords:
 - bc30359
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30359
 ms.assetid: d8dd0aa6-ebe1-4601-beec-130edc12f81e
-ms.openlocfilehash: 924036dbad2f103b94e0de2dfc7de35e3eb13512
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 89f5f2896f37e970e470e5886e111f9fe8883444
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663735"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414103"
 ---
-# <a name="default-can-be-applied-to-only-one-property-name-in-a-type"></a>'Default' può essere applicato solo un nome di proprietà in un \<tipo >
+# <a name="default-can-be-applied-to-only-one-property-name-in-a-type"></a>Default' può essere applicato solo a un nome di proprietà in una \<type>
 Si è provato ad applicare `Default` a più di un nome di proprietà all'interno di una classe, di un'interfaccia o di una struttura.  
   
  **ID errore:** BC30359  
@@ -25,4 +25,4 @@ Si è provato ad applicare `Default` a più di un nome di proprietà all'interno
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Default](../../visual-basic/language-reference/modifiers/default.md)
+- [Default](../language-reference/modifiers/default.md)
