--- a/docs/visual-basic/misc/bc30656.md
+++ b/docs/visual-basic/misc/bc30656.md
@@ -1,5 +1,5 @@
 ---
-title: Campo '<fieldname>' è di tipo non supportato
+title: Il campo '<fieldname>' è di tipo non supportato
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30656
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30656
 ms.assetid: 3c806df2-19f7-4f54-a72a-4043d2cdba9f
-ms.openlocfilehash: f35394f36e5abc41d6be23e71eb02c6dcb1dfee2
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e864d4180068bd92d7d083022aa100306be73283
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61925424"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414998"
 ---
-# <a name="field-fieldname-is-of-an-unsupported-type"></a>Campo '\<nomecampo >' è di tipo non supportato
-Un campo viene dichiarato come tipo che non può essere rappresentato da Visual Studio.  
+# <a name="field-fieldname-is-of-an-unsupported-type"></a>Il campo '\<fieldname>' è di tipo non supportato
+Un campo viene dichiarato come un tipo che non può essere rappresentato da Visual Studio.  
   
  **ID errore:** BC30656  
   
@@ -27,4 +27,4 @@ Un campo viene dichiarato come tipo che non può essere rappresentato da Visual 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di dati](../../visual-basic/language-reference/data-types/index.md)
+- [Tipi di dati](../language-reference/data-types/index.md)
