--- a/docs/visual-basic/misc/bc30657.md
+++ b/docs/visual-basic/misc/bc30657.md
@@ -1,5 +1,5 @@
 ---
-title: "'<procedurename>' contiene un tipo restituito non supportato o tipi di parametro che non sono supportati"
+title: "' <procedurename> ' contiene un tipo restituito non supportato o tipi di parametri non supportati"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30657
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30657
 ms.assetid: dd28b718-6a88-444c-9844-672b93628c16
-ms.openlocfilehash: ffd1bd7b9cb2c1f366a474ef896e22764cd124ce
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 04b5c4152ceee6bceea4dbf894d11539c719d9ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646449"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415011"
 ---
-# <a name="procedurename-has-a-return-type-that-is-not-supported-or-parameter-types-that-are-not-supported"></a>'\<nomeroutine >' contiene un tipo restituito non supportato o tipi di parametro che non sono supportati
-Una routine è dichiarata con parametri o un tipo restituito non può essere rappresentato da Visual Studio.  
+# <a name="procedurename-has-a-return-type-that-is-not-supported-or-parameter-types-that-are-not-supported"></a>' \<procedurename> ' contiene un tipo restituito non supportato o tipi di parametri non supportati
+Una routine viene dichiarata con parametri o un tipo restituito che non può essere rappresentato da Visual Studio.  
   
  **ID errore:** BC30657  
   
@@ -27,4 +27,4 @@ Una routine è dichiarata con parametri o un tipo restituito non può essere rap
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di dati](../../visual-basic/language-reference/data-types/index.md)
+- [Tipi di dati](../language-reference/data-types/index.md)
