--- a/docs/visual-basic/misc/bc30677.md
+++ b/docs/visual-basic/misc/bc30677.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30677
 ms.assetid: b71eb2f0-0bb2-4aeb-94ec-5c37ab960d9e
-ms.openlocfilehash: b1dcb68478d038150a647ac4a67b0916787743c7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5de9959a5811801ae69cca12dadbe8d10cbccfc9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646388"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414842"
 ---
 # <a name="addhandler-or-removehandler-statement-event-operand-must-be-a-dot-qualified-expression-or-a-simple-name"></a>L'operando di evento dell'istruzione 'AddHandler' o 'RemoveHandler' deve essere un'espressione completa di punto o un nome semplice
 L'elemento specificato per l'argomento dell'evento per `AddHandler` o `RemoveHandler` non è riconosciuto come un evento.  
@@ -27,7 +27,7 @@ L'elemento specificato per l'argomento dell'evento per `AddHandler` o `RemoveHan
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione AddHandler](../../visual-basic/language-reference/statements/addhandler-statement.md)
-- [Istruzione RemoveHandler](../../visual-basic/language-reference/statements/removehandler-statement.md)
+- [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
+- [Istruzione RemoveHandler](../language-reference/statements/removehandler-statement.md)
 
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Events](../programming-guide/language-features/events/index.md)
