--- a/docs/visual-basic/misc/bc30690.md
+++ b/docs/visual-basic/misc/bc30690.md
@@ -1,5 +1,5 @@
 ---
-title: Struttura '<structurename>' non può essere indicizzata perché non contiene proprietà predefinite
+title: La struttura '<structurename>' non può essere indicizzata perché non contiene proprietà predefinite
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30690
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30690
 ms.assetid: d3609e1d-0a26-46cc-968a-be8065b554c6
-ms.openlocfilehash: 91276e368fa4d44bf8a1534f373f7a8b345856f6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: de47c97e4fe57a54379c4236e8f31223190e0eb3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646371"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412715"
 ---
-# <a name="structure-structurename-cannot-be-indexed-because-it-has-no-default-property"></a>Struttura '\<nomestruttura >' non può essere indicizzata perché non contiene proprietà predefinite
+# <a name="structure-structurename-cannot-be-indexed-because-it-has-no-default-property"></a>La struttura '\<structurename>' non può essere indicizzata perché non contiene proprietà predefinite
 Si è provato a usare una sintassi di proprietà predefinita con una struttura che non contiene alcuna proprietà predefinita.  
   
  **ID errore:** BC30690  
@@ -25,4 +25,4 @@ Si è provato a usare una sintassi di proprietà predefinita con una struttura c
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Strutture e altri elementi di programmazione](../../visual-basic/programming-guide/language-features/data-types/structures-and-other-programming-elements.md)
+- [Strutture e altri elementi di programmazione](../programming-guide/language-features/data-types/structures-and-other-programming-elements.md)
