--- a/docs/visual-basic/misc/bc30916.md
+++ b/docs/visual-basic/misc/bc30916.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>' non è supportato perché eredita direttamente o indirettamente da se stesso
+title: Il tipo '<typename>' non è supportato perché eredita direttamente o indirettamente da se stesso
 ms.date: 07/20/2015
 f1_keywords:
 - bc30916
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30916
 ms.assetid: cea33daf-1971-4b70-a01d-7d8b5c9e4269
-ms.openlocfilehash: 75581e509f745210bad8e5e697b432d668ca7306
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c137106a749696c0fdc2f36489a9862c077dd2b0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622190"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414077"
 ---
-# <a name="type-typename-is-not-supported-because-it-either-directly-or-indirectly-inherits-from-itself"></a>Tipo '\<nomeTipo >' non è supportato perché eredita direttamente o indirettamente da se stesso
+# <a name="type-typename-is-not-supported-because-it-either-directly-or-indirectly-inherits-from-itself"></a>Il tipo '\<typename>' non è supportato perché eredita direttamente o indirettamente da se stesso
 Una classe o interfaccia eredita da se stessa o da un'altra classe o interfaccia che a sua volta eredita da essa.  
   
  Visual Basic non supporta l'ereditarietà circolare.  
@@ -27,4 +27,4 @@ Una classe o interfaccia eredita da se stessa o da un'altra classe o interfaccia
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
