--- a/docs/visual-basic/misc/bc30932.md
+++ b/docs/visual-basic/misc/bc30932.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30932
 ms.assetid: a38ca4ad-6bbf-421e-a0d7-c5e0a9029160
-ms.openlocfilehash: 5cbb4aafae32fce6ac5ba8957b0536f7dbfe5284
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 2725211cf5297d95922ecb3f522b0dc75bf5bd6f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61768082"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414051"
 ---
 # <a name="constraints-for-this-type-parameter-do-not-match-the-constraints-on-the-corresponding-type-parameter-defined-on-one-of-the-other-partial-types-of-1"></a>I vincoli per questo parametro di tipo non corrispondono ai vincoli nel corrispondente parametro di tipo definito in uno degli altri tipi parziali di '|1'
 Quando si divide la definizione di una classe o struttura in diverse dichiarazioni, il compilatore considera la classe o struttura come l'unione di tutte le relative dichiarazioni parziali. Per questo motivo, non è possibile definire elenchi di parametri di tipo o modificatori in conflitto nelle varie dichiarazioni parziali.  
@@ -27,5 +27,5 @@ Quando si divide la definizione di una classe o struttura in diverse dichiarazio
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Partial](../../visual-basic/language-reference/modifiers/partial.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Partial](../language-reference/modifiers/partial.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
