--- a/docs/visual-basic/misc/bc30934.md
+++ b/docs/visual-basic/misc/bc30934.md
@@ -1,5 +1,5 @@
 ---
-title: La conversione da<type1>'' a<type2>'' non può verificarsi in un'espressione costante usata come argomento di un attributo
+title: In un'espressione costante usata come argomento di un attributo non può verificarsi la conversione da '<type1>' a '<type2>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30934
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30934
 ms.assetid: 120e05f9-1d0e-4800-b05c-a8373e286b9b
-ms.openlocfilehash: 95554b1e2f8f15228724845942c7537851529408
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 5aee9f1939186886bf81ff4499f533986118832c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667023"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414038"
 ---
-# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a>La conversione da\<' tipo1 >' a\<' tipo2 >' non può verificarsi in un'espressione costante usata come argomento di un attributo
+# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression-used-as-an-argument-to-an-attribute"></a>In un'espressione costante usata come argomento di un attributo non può verificarsi la conversione da '\<type1>' a '\<type2>'
 Un'espressione utilizzata per un argomento di attributo restituisce un tipo di dati diverso da quello del parametro di attributo corrispondente e Visual Basic non consente la conversione di tipo richiesta per gli argomenti dell'attributo.  
   
  Un attributo fornisce metadati per l'elemento a cui è applicato e il compilatore deve essere in grado di costruire tutti i metadati in fase di compilazione. Per questo motivo, ogni attributo deve usare valori costanti in fase di compilazione e, di conseguenza, anche ogni argomento di attributo deve restituire un valore costante.  
@@ -31,5 +31,5 @@ Un'espressione utilizzata per un argomento di attributo restituisce un tipo di d
 
 - [Panoramica degli attributi](../programming-guide/concepts/attributes/index.md)
 
-- [Istruzione Const](../../visual-basic/language-reference/statements/const-statement.md)
-- [Conversioni di tipi in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [Istruzione Const](../language-reference/statements/const-statement.md)
+- [Conversioni di tipi in Visual Basic](../programming-guide/language-features/data-types/type-conversions.md)
