--- a/docs/visual-basic/misc/bc32019.md
+++ b/docs/visual-basic/misc/bc32019.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32019
 ms.assetid: c28a3a7f-cd11-4657-bf76-b9daccc383bc
-ms.openlocfilehash: d8ba3658c97da9ca85b2d7bb0bc55345dfa96c86
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 20bc85f369e8a58f2d426b8da6c6afaa26f6f186
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64645984"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413856"
 ---
 # <a name="resume-or-goto-expected"></a>È previsto 'Resume' o 'GoTo'
 Un'istruzione `On Error` non contiene una clausola `Resume` né una clausola `GoTo` . È necessario usare una delle due clausole.  
@@ -25,6 +25,6 @@ Un'istruzione `On Error` non contiene una clausola `Resume` né una clausola `Go
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione On Error](../../visual-basic/language-reference/statements/on-error-statement.md)
-- [Istruzione Resume](../../visual-basic/language-reference/statements/resume-statement.md)
-- [Istruzione GoTo](../../visual-basic/language-reference/statements/goto-statement.md)
+- [Istruzione On Error](../language-reference/statements/on-error-statement.md)
+- [Istruzione Resume](../language-reference/statements/resume-statement.md)
+- [Istruzione GoTo](../language-reference/statements/goto-statement.md)
