--- a/docs/visual-basic/misc/bc32073.md
+++ b/docs/visual-basic/misc/bc32073.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32073
 ms.assetid: 47246e2b-51d4-4a10-a3ac-bc77b44fa2ca
-ms.openlocfilehash: 9cc4b9eeeb2628dc3732eb93b7c413f83eaceabd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ca30fd7e3bd7b56dc3a251cac5ba051d8ca2cd52
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61943611"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413778"
 ---
 # <a name="modules-cannot-be-generic"></a>I moduli non possono essere generici
 Un'istruzione `Module` usa la parola chiave `Of` per introdurre parametri di tipo generico.  
@@ -25,11 +25,11 @@ Un'istruzione `Module` usa la parola chiave `Of` per introdurre parametri di tip
   
 1. Rimuovere la parola chiave `Of` dall'istruzione `Module` .  
   
-2. Se si vuole la funzionalità di un modulo generico, la migliore approssimazione è una classe generica. Usare un [istruzione Class](../../visual-basic/language-reference/statements/class-statement.md) anziché un `Module` istruzione.  
+2. Se si vuole la funzionalità di un modulo generico, la migliore approssimazione è una classe generica. Utilizzare un' [istruzione di classe](../language-reference/statements/class-statement.md) anziché un' `Module` istruzione.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Module](../../visual-basic/language-reference/statements/module-statement.md)
-- [Of](../../visual-basic/language-reference/statements/of-clause.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Procedura: Definire una classe in grado di fornire funzionalità identiche con tipi di dati diversi](../../visual-basic/programming-guide/language-features/data-types/how-to-define-a-class-that-can-provide-identical-functionality.md)
+- [Istruzione Module](../language-reference/statements/module-statement.md)
+- [Di](../language-reference/statements/of-clause.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Procedura: Definire una classe in grado di fornire funzionalità identiche con tipi di dati diversi](../programming-guide/language-features/data-types/how-to-define-a-class-that-can-provide-identical-functionality.md)
