--- a/docs/visual-basic/misc/bc32090.md
+++ b/docs/visual-basic/misc/bc32090.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32090
 ms.assetid: 02f4d82c-dcd7-44cc-b725-81e235f680f6
-ms.openlocfilehash: edfb77f33ab06d6963e6b81347bf398af2887dfc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ac7c844fb3ed01a5395f8b0f64fe81813363bc32
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618583"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358633"
 ---
 # <a name="type-parameter-cannot-have-the-same-name-as-its-defining-function"></a>Il nome del parametro di tipo non può essere uguale a quello della funzione che lo definisce
 Un parametro di tipo di un tipo generico viene dichiarato con lo stesso nome del tipo generico.  
@@ -33,5 +33,5 @@ Un parametro di tipo di un tipo generico viene dichiarato con lo stesso nome del
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
