--- a/docs/visual-basic/misc/bc42302.md
+++ b/docs/visual-basic/misc/bc42302.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42302
 ms.assetid: c3344328-adef-4c3d-b75e-e8a9e450e67c
-ms.openlocfilehash: 5d5d0fde809a559442658fb017154935410bf36b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 07e271c62022ffe8e86421cda71ff6044bb356d9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588045"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413570"
 ---
 # <a name="xml-comment-must-be-the-first-statement-on-a-line"></a>Il commento XML deve essere la prima istruzione di una riga
 Il commento XML deve essere la prima istruzione di una riga. Il commento XML verrà ignorato.  
@@ -27,5 +27,5 @@ Il commento XML deve essere la prima istruzione di una riga. Il commento XML ver
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
