--- a/docs/visual-basic/misc/bc42303.md
+++ b/docs/visual-basic/misc/bc42303.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42303
 ms.assetid: b09d3d91-395e-4c72-981e-e9f7d467e1f5
-ms.openlocfilehash: 809250ff5411728ca4a20f49912f91871b893436
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f1833d82cc23a7a47f6edecdf89453555cacf937
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588044"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413557"
 ---
 # <a name="xml-comment-cannot-appear-within-a-method-or-a-property"></a>Il commento XML non può essere specificato all'interno di un metodo o di una proprietà
 Non è possibile specificare un commento XML all'interno di un metodo o di una proprietà. Il commento XML verrà ignorato. I blocchi di commento XML non possono essere inseriti in metodi o proprietà.  
@@ -25,5 +25,5 @@ Non è possibile specificare un commento XML all'interno di un metodo o di una p
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Creare documentazione XML](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
+- [Procedura: Creare documentazione XML](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
