--- a/docs/visual-basic/misc/bc42307.md
+++ b/docs/visual-basic/misc/bc42307.md
@@ -1,5 +1,5 @@
 ---
-title: Il parametro del commento XML '<parameter>' non corrisponde a un parametro corrispondente <keyword> istruzione
+title: Il parametro '<parameter>' del commento XML non corrisponde a un parametro nell'istruzione <keyword> corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42307
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC42307
 ms.assetid: 59029afa-5c86-4e24-9823-0ffdd5805a95
-ms.openlocfilehash: c2d205fbd6506bd197d0f8dd1cdf37248f237c8c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3bb2d2ae18b5d9e68676d7285e56c6e05d9abbe0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64635861"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413505"
 ---
-# <a name="xml-comment-parameter-parameter-does-not-match-a-parameter-on-the-corresponding-keyword-statement"></a>Il parametro del commento XML '\<parametro >' non corrisponde a un parametro corrispondente \<parola chiave > istruzione
-Il parametro del commento XML \<parametro > non corrisponde a un parametro corrispondente \<parola chiave > istruzione. Il commento XML verrà ignorato.  
+# <a name="xml-comment-parameter-parameter-does-not-match-a-parameter-on-the-corresponding-keyword-statement"></a>Il parametro '\<parameter>' del commento XML non corrisponde a un parametro nell'istruzione \<keyword> corrispondente
+Il parametro del commento XML non \<parameter> corrisponde a un parametro nell' \<keyword> istruzione corrispondente. Il commento XML verrà ignorato.  
   
  Un tag di commenti XML è stato specificato per alcuni, ma non per tutti, i parametri in un metodo.  
   
@@ -27,5 +27,5 @@ Il parametro del commento XML \<parametro > non corrisponde a un parametro corri
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
