--- a/docs/visual-basic/misc/bc42309.md
+++ b/docs/visual-basic/misc/bc42309.md
@@ -1,5 +1,5 @@
 ---
-title: Il commento XML contiene un tag con un attributo 'cref' '<attribute>' che non può essere risolto
+title: Il commento XML contiene un elemento con un attributo 'cref' '<attribute>' che non è stato possibile risolvere
 ms.date: 07/20/2015
 f1_keywords:
 - bc42309
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC42309
 ms.assetid: c9f3cfa5-565f-48bf-8616-cfb25d24f89e
-ms.openlocfilehash: ee763c482fa72f1ab08ea0c2ece322f79e0f8e2d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 095f0775db3a7f1f8bd9a72db7fd09e408476625
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604353"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413466"
 ---
-# <a name="xml-comment-has-a-tag-with-a-cref-attribute-attribute-that-could-not-be-resolved"></a>Il commento XML contiene un tag con un attributo 'cref' '\<attributo >' che non può essere risolto
-Il commento XML contiene un tag con un attributo 'cref' \<attributo > che non può essere risolto. Il commento XML verrà ignorato.  
+# <a name="xml-comment-has-a-tag-with-a-cref-attribute-attribute-that-could-not-be-resolved"></a>Il commento XML contiene un elemento con un attributo 'cref' '\<attribute>' che non è stato possibile risolvere
+Il commento XML contiene un tag con un attributo ' cref ' \<attribute> che non è stato possibile risolvere. Il commento XML verrà ignorato.  
   
  I tag possono includere un attributo `cref` che designa un collegamento a un altro elemento del commento XML specificando il nome relativo dell'identificatore. In fase di compilazione il valore viene sostituito con l'identificatore XML qualificato per il valore a cui si riferisce l'utente. Il compilatore usa le normali regole di risoluzione per trovare il tipo o il membro.  
   
@@ -27,5 +27,5 @@ Il commento XML contiene un tag con un attributo 'cref' \<attributo > che non pu
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Creare documentazione XML](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
+- [Procedura: Creare documentazione XML](../programming-guide/program-structure/how-to-create-xml-documentation.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
